<resources>
    <string name="app_name">Zad 1</string>
    <string name="x2">x<sup><small> 2 </small></sup> +</string>
    <string name="x">x +</string>
    <string name="equ">" = 0"</string>
    <string name="plus">+</string>
    <string name="compute">Compute</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="error">THAT\'S NOT A NUMBER</string>

</resources>